--- a/styles/main.css
+++ b/styles/main.css
@@ -14,7 +14,8 @@
   --grey-500: #dfdfe1;
   --grey-300: #fefff6;
   --grey-200: #f1f2f6;
-  --green-400: #138b80;
+  --skyblue-400: #00d9ff;
+  --green-400: #04d004;
   --green-300: #2dca7a;
   --green-100: #dcf8c6;
   --primary-font: "Roboto", sans-serif;
@@ -105,7 +106,7 @@ aside header {
 }
 
 .search form input {
-  background-color: var(--grey-500);
+  background-color: whitesmoke;
   width: 100%;
   display: block;
   border: none;
@@ -113,6 +114,13 @@ aside header {
   border-radius: 10px;
   outline: none;
   color: white;
+}
+
+.search form input:hover {
+  background-color: var(--grey-700);
+  border-left:5px solid var(--grey-700);
+  border-color: var(--grey-700);
+  
 }
 
 .search input:focus {
@@ -161,13 +169,13 @@ aside header {
 .user-chat:hover {
   background-color: var(--grey-700);
   cursor: pointer;
-  border-left: 3px solid var(--green-400);
+  border-left: 3px solid var(--grey-700);
 }
 
 /* messages panel */
 
 .chat-header {
-  background-color: forestgreen;
+  background-color: rgb(29, 113, 29);
   border-bottom: 1px solid var(--grey-500);
   display: flex;
   padding: 10px;
@@ -175,13 +183,14 @@ aside header {
   gap: 10px;
 }
 
+
 .chat-header img {
   width: 50px;
   border-radius: 50%;
 }
 
 .chat-header p {
-  color: var(--grey-700);
+  color: rgb(205, 205, 205);
 }
 
 /* messages styles */
@@ -269,6 +278,12 @@ footer textarea {
   border-radius: 15px;
   width: 100%;
   border: none;
+}
+
+footer textarea .taxt {
+  font-size: 16px;
+  font-family: var(--primary-font);
+  display: block;
 }
 
 footer textarea:focus {
